Bruker map i stedet for openapi generert kode for body i StPeterPlugin. Forbedret logging.
